Add main characters

--- a/main.html
+++ b/main.html
@@ -10,14 +10,18 @@
         <div id="mainPageButtonsDiv">
             <button type="button" onclick="">Start Game</button>
             <button type="button" onclick="">Rules and story</button>
-        </div>
+        </div> 
+        <div id="middleMainDiv">
+            <div id="rabbitMain">
+                <img id="rabbitMainImg" src="/rabbit.png" alt="dragon">
+            </div>
         <div id="storyandRulesDiv"> 
             <p id="rules"> 
-                Your role is protecting the history from evil wizzard who want to change the flow of history and destroy the present. 
-                During the storm wizzard was lucky and he stole three pages from the book which stored the history of the inventions which 
+                Your role is protecting the history from evil dragon who want to change the flow of history and destroy the present. 
+                During the storm dragon was lucky and he stole three pages from the book which stored the history of the inventions which 
                 changed the history. If you would not return them, the history would be change forever. In order to return those pages you need to play
-                a simple game. The name of the game is "Elements". You have four elements of the nature in your possetion, and the wizzard has the same set of elements.
-                Those elements are: earth, wind, water and fire. You need to choose and element, and wizzard will choose the element. Those elements would fight and would either loose or win. 
+                a simple game. The name of the game is "Elements". You have four elements of the nature in your possetion, and the dragon has the same set of elements.
+                Those elements are: earth, wind, water and fire. You need to choose and element, and dragon will choose the element. Those elements would fight and would either loose or win. 
                 The winner would be the one who would gain 5 winning points. In order to win a game you need to win all three game to get all the pages back. After each game you would be asked
                 if you want to contimue.
 
@@ -29,8 +33,12 @@
                 Fire and Earth, fire would dry out earth, one point will be added to player who choose fire.
                 In all other cases points would not be added.
             </p>
-            <img id ="elements" src="/elements-removebg-preview (1).png" alt="Elements">
+            <img id ="elements" src="/elements_steampunk-removebg-preview.png" alt="Elements">
+        </div>
+        <div id="dragonMain">
+            <img id="dragonMainImg" src="dragon.png" alt="dragon">
         </div>
     </div>
+</div>
 </body>
 </html>
