--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
      <title>Game</title>
 </head>
 <body id="gamePageBody">
-    
+    <div id="gamePageMainDiv">
+        <div class="elementsAndChoiseDivs">
+            <div id="elements">
+                <img class="elementsImg" src="/assets/elements/Fire.gif" onClick="" alt="Fire">
+                <img class="elementsImg" src="/assets/elements/Water.gif" onClick="" alt="Water">
+                <img class="elementsImg" src="/assets/elements/Earth.gif" onClick="" alt="Earth">
+                <img class="elementsImg" src="/assets/elements/Wind.gif" onClick="" alt="Wind">
+            </div>
+
+
+        </div>
+
+    </div>
 </body>
 </html>
