--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <div id="gamePageMainDiv">
         <div class="elementsAndChoiseDivs">
             <div id="elements">
-                <img class="elementsImg" src="/assets/elements/Fire.gif" onClick="" alt="Fire">
-                <img class="elementsImg" src="/assets/elements/Water.gif" onClick="" alt="Water">
-                <img class="elementsImg" src="/assets/elements/Earth.gif" onClick="" alt="Earth">
-                <img class="elementsImg" src="/assets/elements/Wind.gif" onClick="" alt="Wind">
+                <img class="elementsImg" src="/assets/elements/FireWhite.gif" onClick="" alt="Fire">
+                <img class="elementsImg" src="/assets/elements/WaterWhite.gif onClick="" alt="Water">
+                <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="" alt="Earth">
+                <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="" alt="Wind">
             </div>
 
 
