Add dragon elements

--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
 <body id="gamePageBody">
     <div id="gamePageMainDiv">
         <div class="elementsAndChoiseDivs">
-            <div id="elements">
+            <div id="elementsUser">
                 <img class="elementsImg" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
                 <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
                 <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                 <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
-                <p id="winner"></p>
             </div>
-
-
+            <div id="userScoreDiv">
+            <p id="userScore">User score</p>
+            </div>
+            <div id="elementsDragon">
+                <img class="elementsImg" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
+                <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
+                <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
+                <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
+            </div>
         </div>
 
     </div>
