Check if src working for img

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                 </div>
             </div>
         </div>
+        <div id="bottomGamePage">
+            <div id="stolenPage">
+             <div id="imgOfInventionDiv">
+                 <img id="imgOfInvention" src="" alt="">
+                 <button type="button" onclick="showImg()">Image</button>
+             </div>   
+            </div>
+        </div>
 
     <script src="/code.js"></script>
 </body>
