Working inventions info, picture and name

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
             <div id="stolenPage">
              <div id="imgOfInventionDiv">
                  <img id="imgOfInvention" src="" alt="">
+                 </div> 
+                 <div id="inventionInfoDiv">
+                 <h1 id="inventionName"></h1>
+                 <p id=inventionInfo></p>
+                </div>
                  <button type="button" onclick="showImg()">Image</button>
-             </div>   
+              
             </div>
         </div>
 
