--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
                 </div>
                 <div id="choices">
-                    <div id="userChoice"></div>
+                        <img class="choiceClass" id="userChoice" src="/assets/elements/EarhWhite.gif" alt="Player's choice">
+                        <img class="choiceClass" id="dragonChoice" src="/assets/elements/FireWhite.gif" alt="Dragon's choice">
+                    </div>
                     <div id="dragonChoice"></div>
                 </div>
             </div>
