Add main Characters

--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
     <div id="mainContainer">
         <h1> WELCOME GUARDIAN ! </h1>
         <div id="mainPageButtonsDiv">
+            <form>
+                <input type="text" placeholder="Please enter your name">
+                <input type="submit">
+            </form>
             <button type="button" onclick="">Start Game</button>
             <button type="button" onclick="">Rules and story</button>
         </div> 
