--- a/main.html
+++ b/main.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" type="text/css" href="styles.css">
+   <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Diplomata+SC|Kenia|MedievalSharp|Milonga|Miltonian+Tattoo|New+Rocker|Passero+One|Rye|Sancreek&display=swap" rel="stylesheet">
+   <!-- font-family: 'Kenia', cursive;
+font-family: 'Black And White Picture', sans-serif;
+font-family: 'Passero One', cursive;
+font-family: 'Miltonian Tattoo', cursive;
+font-family: 'Diplomata SC', cursive;
+font-family: 'MedievalSharp', cursive;
+font-family: 'New Rocker', cursive;
+font-family: 'Sancreek', cursive;
+font-family: 'Milonga', cursive;
+font-family: 'Rye', cursive; -->
     <title>Welcome</title>
 </head>
 <body>
@@ -13,7 +24,7 @@
                 <input type="submit">
             </form>
             <button type="button" onclick="">Start Game</button>
-            <button type="button" onclick="">Rules and story</button>
+            <button type="button" onclick="">Rules and Story</button>
         </div> 
         <div id="middleMainDiv">
             <div id="rabbitMain">
