--- a/welcome.html
+++ b/welcome.html
@@ -23,8 +23,8 @@ font-family: 'Rye', cursive; -->
                 <input type="text" placeholder="Please enter your name">
                 <input type="submit">
             </form>
-            <button type="button" onclick="">Start Game</button>
-            <button type="button" onclick="">Rules and Story</button>
+            <button type="button" onclick="openGame()">Start Game</button>
+            <button type="button" onclick="displayRules()">Rules and Story</button>
         </div> 
         <div id="middleMainDiv">
             <div id="rabbitMain">
