--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,7 @@ font-family: 'Rye', cursive; -->
         <div id="mainPageButtonsDiv">
             <form>
                 <input id="playerName" type="text" placeholder="Please enter your name">
-                <button id="getName" type="button" onclick="getName()"></button>
+                <button id="getName" type="button" onclick="getName()">Submit</button>
             </form>
             <button type="button" onclick="openGame()">Start Game</button>
             <button type="button" onclick="displayRules()">Rules and Story</button>
