working welcome page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
                 </div> 
                  <div id="continueOrQuit">
-                     
+                     <p id="question">Would you like to continue?</p>
+                     <button type="button" onclick="continueGame">Continue</button>
+                     <button type="button" onclick="exitGame">Exit</button>
                  </div>
                 </div>
           
