--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@ font-family: 'Milonga', cursive;
 font-family: 'Rye', cursive; -->
     <title>Welcome</title>
 </head>
-<body>
+<body id="bodyWelcome">
     <div id="mainContainer">
         <h1 id="welcome"> WELCOME GUARDIAN ! </h1>
         <div id="mainPageButtonsDiv">
