--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body id="gamePageBody">
     <div id="gamePageTopDiv">
             <div id="userSide">
+                <h1 id="userName">GUARDIAN</h1>
+                <div id="charElemPageUser">
                 <img id="rabbitGame" src="/rabbit.png" alt="Rabbit">
                 <div id="elementsUser">
                     <img class="elementsImg" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
                     <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
                     <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                     <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
+                </div>
                 </div>
                 <div id="userPages">
                 </div>
@@ -30,12 +33,14 @@
                 </div> 
                  <div id="continueOrQuit">
                      <p id="question">Would you like to continue?</p>
-                     <button type="button" onclick="continueGame">Continue</button>
+                     <button class="questionButtons" type="button" onclick="continueGame">Continue</button>
                      <button type="button" onclick="exitGame">Exit</button>
-                 </div>
+                </div>
                 </div>
           
             <div id="dragonSide">
+                <h1 id="dragonName">DRAGON</h1>
+                <div id="charElemPageDragon">
                 <img id="dragonGame" src="/dragon.png" alt="Dragon">
             <div id="elementsDragon">
                 <img class="elementsImgDragon" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
@@ -44,7 +49,7 @@
                 <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
             </div>
              <div id="dragonPages">
-                    
+                 </div>   
                 </div>
             </div>
           </div>
