--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                     <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                     <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
                 </div>
+                <p id="userPages">4</p>
                 </div>
-                <div id="userPages">
+                <div id="userScore">
                 </div>
             </div>
             <div id="scoresPagesChoices">
@@ -33,9 +34,11 @@
                 </div> 
                  <div id="continueOrQuit">
                      <p id="question">Would you like to continue?</p>
-                     <button class="questionButtons" type="button" onclick="continueGame">Continue</button>
-                     <button type="button" onclick="exitGame">Exit</button>
+                     <div id="questionButtons">
+                     <button type="button" onclick="continueGame">Continue</button>
+                     <button  type="button" onclick="exitGame">Exit</button>
                 </div>
+            </div>
                 </div>
           
             <div id="dragonSide">
@@ -48,7 +51,8 @@
                 <img class="elementsImgDragon" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                 <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
             </div>
-             <div id="dragonPages">
+            <p id="dragonPages">55</p>
+             <div id="dragonScore">
                  </div>   
                 </div>
             </div>
