Finished html game

--- a/index.html
+++ b/index.html
@@ -17,26 +17,24 @@
                     <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                     <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
                 </div>
-                <p id="userPages">4</p>
+                <p id="userPages">Pages 4</p>
                 </div>
-                <div id="userScore">
-                </div>
+                <div id="userScore"></div>
+                <p id="userScoreTxt">77</p>
             </div>
             <div id="scoresPagesChoices">
-                
                 <div id="choices">
                         <img class="choiceClass" id="userChoice" src="/assets/elements/EarhWhite.gif" alt="Player's choice">
                         <img class="choiceClass" id="dragonChoice" src="/assets/elements/FireWhite.gif" alt="Dragon's choice">
-                    <p></p>
+                    <p id="winerMiniGame">Win</p>
                     </div>
-                    <div id="scores">
 
-                </div> 
                  <div id="continueOrQuit">
                      <p id="question">Would you like to continue?</p>
                      <div id="questionButtons">
-                     <button type="button" onclick="continueGame">Continue</button>
-                     <button  type="button" onclick="exitGame">Exit</button>
+                     <button  type="button" onclick="exitGame()">Exit</button>
+                     <button type="button" onclick="reloadPage()">Reload</button>
+                     <button type="button" onclick="continueGame()">Continue</button>   
                 </div>
             </div>
                 </div>
@@ -51,9 +49,9 @@
                 <img class="elementsImgDragon" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
                 <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
             </div>
-            <p id="dragonPages">55</p>
-             <div id="dragonScore">
-                 </div>   
+            <p id="dragonPages">Pages 5</p>
+             <div id="dragonScore"></div>  
+             <p id="dragonScoreTxt">77</p>  
                 </div>
             </div>
           </div>
