--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,6 @@
 <head>
    <link rel="stylesheet" type="text/css" href="styles.css">
    <link href="https://fonts.googleapis.com/css?family=Milonga|Rye|Sancreek&display=swap" rel="stylesheet">
-   
-<!-- font-family: 'Sancreek', cursive;
-font-family: 'Milonga', cursive;
-font-family: 'Rye', cursive; -->
     <title>Welcome</title>
 </head>
 <body id="bodyWelcome">
@@ -15,7 +11,7 @@ font-family: 'Rye', cursive; -->
         <div id="mainPageButtonsDiv">
             <form>
                 <input id="playerName" type="text" placeholder="Please enter your name">
-                <button id="getName" type="button" onclick="getName()">Submit</button>
+                <input id="getName" type="submit" onclick="getName()">
             </form>
             <button type="button" onclick="openGame()">Start Game</button>
             <button type="button" onclick="displayRules()">Rules and Story</button>
