--- a/welcome.html
+++ b/welcome.html
@@ -9,10 +9,6 @@
     <div id="mainContainer">
         <h1 id="welcome"> WELCOME GUARDIAN ! </h1>
         <div id="mainPageButtonsDiv">
-            <form>
-                <input id="playerName" type="text" placeholder="Please enter your name">
-                <input id="getName" type="submit" onclick="getName()">
-            </form>
             <button type="button" onclick="openGame()">Start Game</button>
             <button type="button" onclick="displayRules()">Rules and Story</button>
         </div> 
@@ -45,6 +41,7 @@
         </div>
     </div>
 </div>
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 <script src="/code.js"></script>
 </body>
 </html>
