--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="/code.js"></script>
 </body>
 </html>
