--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
      <title>Game</title>
 </head>
 <body id="gamePageBody">
+    <div id="coverWin">
+        <p> </p>
+        <img>
+    </div>
+    <div id="coverLoose">
+
+    </div>
     <div id="gamePageTopDiv">
             <div id="userSide">
                 <h1 id="userName">GUARDIAN</h1>
@@ -20,13 +27,13 @@
                 <p id="userPages">Pages 4</p>
                 </div>
                 <div id="userScore"></div>
-                <p id="userScoreTxt">77</p>
+                <p id="userScoreTxt"></p>
             </div>
             <div id="scoresPagesChoices">
                 <div id="choices">
                         <img class="choiceClass" id="userChoice" src="/assets/elements/EarhWhite.gif" alt="Player's choice">
                         <img class="choiceClass" id="dragonChoice" src="/assets/elements/FireWhite.gif" alt="Dragon's choice">
-                    <p id="winerMiniGame">Win</p>
+                    <p id="winerMiniGame"></p>
                     </div>
 
                  <div id="continueOrQuit">
@@ -51,7 +58,7 @@
             </div>
             <p id="dragonPages">Pages 5</p>
              <div id="dragonScore"></div>  
-             <p id="dragonScoreTxt">77</p>  
+             <p id="dragonScoreTxt"></p>  
                 </div>
             </div>
           </div>
