--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body id="gamePageBody">
     <div id="coverWin">
-        <p> </p>
-        <img>
+    
     </div>
     <div id="coverLoose">
 
@@ -19,10 +18,10 @@
                 <div id="charElemPageUser">
                 <img id="rabbitGame" src="/rabbit.png" alt="Rabbit">
                 <div id="elementsUser">
-                    <img class="elementsImg" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
-                    <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
-                    <img class="elementsImg" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
-                    <img class="elementsImg" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
+                    <img class="elementsImg" src="/assets/elements/FireWhite.gif" onclick="battle('Fire');" alt="Fire">
+                    <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onclick="battle('Water');" alt="Water">
+                    <img class="elementsImg" src="/assets/elements/EarthWhite.gif" onclick="battle('Earth');" alt="Earth">
+                    <img class="elementsImg" src="/assets/elements/WindWhite.gif" onclick="battle('Wind');" alt="Wind">
                 </div>
                 <p id="userPages">Pages 4</p>
                 </div>
@@ -31,8 +30,8 @@
             </div>
             <div id="scoresPagesChoices">
                 <div id="choices">
-                        <img class="choiceClass" id="userChoice" src="/assets/elements/EarhWhite.gif" alt="Player's choice">
-                        <img class="choiceClass" id="dragonChoice" src="/assets/elements/FireWhite.gif" alt="Dragon's choice">
+                        <img class="choiceClass" id="userChoice" src="" alt="Player's choice">
+                        <img class="choiceClass" id="dragonChoice" src="" alt="Dragon's choice">
                     <p id="winerMiniGame"></p>
                     </div>
 
@@ -53,7 +52,7 @@
             <div id="elementsDragon">
                 <img class="elementsImgDragon" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
                 <img class="elementsImgDragon" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
-                <img class="elementsImgDragon" src="/assets/elements/EarhWhite.gif" onClick="battle('Earth');" alt="Earth">
+                <img class="elementsImgDragon" src="/assets/elements/EarthWhite.gif" onClick="battle('Earth');" alt="Earth">
                 <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
             </div>
             <p id="dragonPages">Pages 5</p>
@@ -73,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+        
     <script src="/code.js"></script>
 </body>
 </html>
