something wrong with page display

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </div>
 
                  <div id="continueOrQuit">
+                     <p id="winOrLoose"></p>
                      <p id="question">Would you like to continue?</p>
                      <div id="questionButtons">
                      <button  type="button" onclick="exitGame()">Exit</button>
@@ -55,7 +56,7 @@
                 <img class="elementsImgDragon" src="/assets/elements/EarthWhite.gif" onClick="battle('Earth');" alt="Earth">
                 <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
             </div>
-            <p id="dragonPages">Pages 5</p>
+            <p id="dragonPages"></p>
              <div id="dragonScore"></div>  
              <p id="dragonScoreTxt"></p>  
                 </div>
@@ -68,7 +69,7 @@
                  <img id="imgOfInvention" src="" alt="">
                  <div id="inventionInfoDiv">
                  <h1 id="inventionName"></h1>
-                 <p id=inventionInfo></p>
+                 <p id="inventionInfo"></p>
                 </div>
             </div>
         </div>
