working page count

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img class="elementsImg" src="/assets/elements/EarthWhite.gif" onclick="battle('Earth');" alt="Earth">
                     <img class="elementsImg" src="/assets/elements/WindWhite.gif" onclick="battle('Wind');" alt="Wind">
                 </div>
-                <p id="userPages">Pages 4</p>
+                <p id="userPages"></p>
                 </div>
                 <div id="userScore"></div>
                 <p id="userScoreTxt"></p>
