--- a/welcome.html
+++ b/welcome.html
@@ -6,6 +6,11 @@
     <title>Welcome</title>
 </head>
 <body id="bodyWelcome">
+    <div id="gears">
+        <img id="gear1" src="/assets/gear.png" alt="gear">
+        <img id="gear2" src="/assets/gear.png" alt="gear">
+        <img id="gear3" src="/assets/gear.png" alt="gear">
+    </div>
     <div id="mainContainer">
         <h1 id="welcome"> WELCOME GUARDIAN ! </h1>
         <div id="mainPageButtonsDiv">
@@ -40,6 +45,7 @@
             <img id="dragonMainImg" src="dragon.png" alt="dragon">
         </div>
     </div>
+
 </div>
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 <script src="/code.js"></script>
