--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
      <title>Game</title>
 </head>
 <body id="gamePageBody">
-
+<div id="coverLoose">
+    <p id="loose">YOU LOOSE !</p>
+</div>
+<div id="coverWin">
+    <p id="win">YOU WIN !</p>
+</div>
     <div id="gamePageTopDiv">
             <div id="userSide">
                 <h1 id="userName">GUARDIAN</h1>
@@ -46,10 +51,10 @@
                 <div id="charElemPageDragon">
                 <img id="dragonGame" src="/dragon.png" alt="Dragon">
             <div id="elementsDragon">
-                <img class="elementsImgDragon" src="/assets/elements/FireWhite.gif" onClick="battle('Fire');" alt="Fire">
-                <img class="elementsImgDragon" src="/assets/elements/WaterWhite.gif" onClick="battle('Water');" alt="Water">
-                <img class="elementsImgDragon" src="/assets/elements/EarthWhite.gif" onClick="battle('Earth');" alt="Earth">
-                <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" onClick="battle('Wind');" alt="Wind">
+                <img class="elementsImgDragon" src="/assets/elements/FireWhite.gif"  alt="Fire">
+                <img class="elementsImgDragon" src="/assets/elements/WaterWhite.gif"  alt="Water">
+                <img class="elementsImgDragon" src="/assets/elements/EarthWhite.gif" alt="Earth">
+                <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" alt="Wind">
             </div>
             <p id="dragonPages"></p>
              <div id="dragonScore"></div>  
@@ -60,12 +65,13 @@
         </div>
         <div id="bottomGamePage">
             <div id="stolenPage">
-             
+                <div id="stolenInvDiv">
                  <img id="imgOfInvention" src="" alt="">
                  <div id="inventionInfoDiv">
                  <h1 id="inventionName"></h1>
                  <p id="inventionInfo"></p>
                 </div>
+            </div>
             </div>
         </div>
    
