--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </div>
 <div id="coverWin">
     <p id="win">YOU WIN !</p>
+    <img id="baloon" src="/assets/baloon.png" alt="baloon">
 </div>
     <div id="gamePageTopDiv">
             <div id="userSide">
