--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 <body id="gamePageBody">
 <div id="coverLoose">
     <p id="loose">YOU LOOSE !</p>
+    <img id="explosion1" src="/assets/explosion.png">
+    <img id="explosion2" src="/assets/explosion.png">
 </div>
 <div id="coverWin">
     <p id="win">YOU WIN !</p>
     <img id="baloon" src="/assets/baloon.png" alt="baloon">
+    <img id="aircraft" src="/assets/flying.png" alt="flying">
 </div>
     <div id="gamePageTopDiv">
             <div id="userSide">
-                <h1 id="userName">GUARDIAN</h1>
+                <p id="userName">GUARDIAN</p>
                 <div id="charElemPageUser">
                 <img id="rabbitGame" src="/rabbit.png" alt="Rabbit">
                 <div id="elementsUser">
@@ -48,7 +51,7 @@
                 </div>
           
             <div id="dragonSide">
-                <h1 id="dragonName">DRAGON</h1>
+                <p id="dragonName">DRAGON</p>
                 <div id="charElemPageDragon">
                 <img id="dragonGame" src="/dragon.png" alt="Dragon">
             <div id="elementsDragon">
