--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="gamePageBody">
 <div id="coverLoose">
-    <p id="loose">YOU LOOSE !</p>
+    <h1 id="loose">YOU LOOSE !</h>
     <img id="explosion1" src="/assets/explosion.png">
     <img id="explosion2" src="/assets/explosion.png">
 </div>
