final version No Readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p id="win">YOU WIN !</p>
     <img id="baloon" src="/assets/baloon.png" alt="baloon">
     <img id="aircraft" src="/assets/flying.png" alt="flying">
+    <img id="air" src="/assets/flying3.png" alt="flying aircraft">
 </div>
     <div id="gamePageTopDiv">
             <div id="userSide">
