--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body id="gamePageBody">
     <div id="coverLoose">
         <h1 id="loose">YOU LOOSE !</h>
-            <button id="reloadLoose" type="button" onclick="reloadPage()">Reload</button>
+            <button id="reloadLoose" type="button" onclick="reloadPage()">Restart</button>
         <img id="explosion1" src="/assets/explosion.png">
         <img id="explosion2" src="/assets/explosion.png">
     </div>
     <div id="coverWin">
         <p id="win">YOU WIN !</p>
-        <button id="reloadWin" type="button" onclick="reloadPage()">Reload</button>
+        <button id="reloadWin" type="button" onclick="reloadPage()">Restart</button>
         <img id="baloon" src="/assets/baloon.png" alt="baloon">
         <img id="aircraft" src="/assets/flying.png" alt="flying">
         <img id="air" src="/assets/flying3.png" alt="flying aircraft">
@@ -46,7 +46,7 @@
                 <p id="question">Would you like to continue?</p>
                 <div id="questionButtons">
                     <button class="buttonsQ" type="button" onclick="exitGame()">Exit</button>
-                    <button class="buttonsQ" type="button" onclick="reloadPage()">Reload</button>
+                    <button class="buttonsQ" type="button" onclick="reloadPage()">Restart</button>
                     <button class="buttonsQ" type="button" onclick="continueGame()">Continue</button>   
                 </div>
             </div>
